5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2573.log
== TEST (2019-06-12 22:27:26) 
-- CODE:
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	peso("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<==max(b)<=34.99):
	print("OBESIDADE")
elif(35<==max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<==max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
File "XXXX", line 19
    elif(30<==max(b)<=34.99):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:27:59) 
-- CODE:
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<==max(b)<=34.99):
	print("OBESIDADE")
elif(35<==max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<==max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
File "XXXX", line 19
    elif(30<==max(b)<=34.99):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:28:28) 
-- CODE:
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<==max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<==max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
File "XXXX", line 21
    elif(35<==max(b)<=39.99):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:28:43) 
-- CODE:
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:29:04) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:29:12) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
0.97563
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:29:29) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:30:56) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:31:51) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.23896
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:32:50) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:33:48) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:35:00) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.30041
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:35:09) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
1.18653
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:35:16) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("x: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.945807
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:35:54) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:38:13) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.13867
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:38:17) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:38:23) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:38:26) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.38466
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:41:59) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
0.859068
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:49:44) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
0.962774
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:51:00) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>=40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.10377
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:51:15) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:51:19) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.820669
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:53:06) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(p/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<+max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.961992
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 8, in <module>
    b[i]=round(p/a[i]**2, 2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:55:30) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.929987
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:55:39) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
1.22726
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:24) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
1.10182
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
x: y: [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:20:34) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<==max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
0.601259
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 26
    elif(35<==max(b)<=39.99):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:20:45) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
1.18966
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
x: y: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
x: y: [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:20:59) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.20971
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:21:03) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:", max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.20319
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:32:33) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- EXECUTION TIME:
1.17702
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PRECO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:32:54) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:35:04) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:35:43) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:35:57) 
-- CODE:
from numpy import*
p= array(eval(input("x: ")))
a= array(eval(input("y: ")))
n=size(p)
b=zeros(n)
i=0
for x in p:
	b[i]=round(x/a[i]**2, 2)
	i=i+1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if (max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif (17<=max(b)<=18.49):
	print("ABAIXO DO PRECO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBISIDADE")
elif(35<=max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:54:31) 
-- CODE:


from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont[j],2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(cont)<=24.99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34.99):
	print("OBESIDADE")
elif(35<=max(cont)<=39.99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.02198
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
